@startuml
' Рис. 2.5. Концептуальна модель даних системи вибору локацій зарядних станцій
skinparam shadowing false
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 11
hide circle
skinparam linetype ortho
skinparam entity {
    BackgroundColor #f5f5f5
    BorderColor #333333
}

entity "Profile" as Profile {
    code
    name
    description
}

entity "Criterion" as Criterion {
    code
    name
    unit
    optimizationType
    scale
}

entity "PairwiseMatrixCell" as PWM {
    l
    m
    u
}

entity "CriterionValue" as CV {
    value
}

entity "Location" as Location {
    name
    address
    district
    coordinates
}

entity "ExistingStation" as Station {
    name
    power
    connectorType
    coordinates
}

entity "EvaluationRun" as Run {
    createdAt
    status
    weightsVector
    executionTime
}

entity "RankingItem" as Rank {
    rank
    closenessCoefficient
    distanceToPositive
    distanceToNegative
}

entity "SensitivityRecord" as Sens {
    iterations
    perturbation
    stabilityMatrix
    confidenceIntervals
}

Profile ||--o{ PWM
Criterion ||--o{ PWM
Location ||--o{ CV
Criterion ||--o{ CV
Profile ||--o{ Run
Run ||--o{ Rank
Run ||--|| Sens
Location ||--o{ Rank

@enduml
